<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/singleLayout"
    android:background="@drawable/table_bg" >
    
    <Button
        android:id="@+id/playBtn"
        android:text="@string/Play"
        style="@style/gameBtn"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onPlayPassClick"
        android:background="@drawable/blue_btn"
        />
    
    <Button
        android:id="@+id/passBtn"
        android:text="@string/Pass"
        style="@style/gameBtn"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onPlayPassClick"
        android:background="@drawable/blue_btn"
        />
    
    <Button
        android:id="@+id/startBtn"
        android:text="@string/Start"
        style="@style/gameBtn"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onStartResetClick"
        android:background="@drawable/blue_btn"
        />

</RelativeLayout>